2001-04-30  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/gtkutils.c (dialog_window_get_gtkwin): new function to
	return the GtkWindow of a DialogWindow;
	(dialog_window_set_content): this function doesn't add a frame
	around the dialog content anymore.
	dialog_window_set_content_with_frame does this instead.

	* src/ps_print.c: converted all the dialogs to DialogWindow's.
	Deleted all references to parent->parent->... (really dirty) and
	used real widget reference instead.

2001-04-29  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/ps_print.c (no_overwrite_cb): non-event signal callbacks
	should be void

	* src/gtkutils.c (dialog_window_set_button_box): handling of the ESC
	key put here. If your dialog has no button, you probably don't
	want to be able to close it (progress, temporary dialog...).

2001-04-28  Wolfgang Sourdeau  <wolfgang@contre.com>

	* src/viewer.c (viewer_window_cfg_event_cb): this function serves
	as a callback to the "configure-event" signal rather than to
	"show". This permit us to get rid of the random mis-resizing of
	the window. Thanks to Havoc Pennington for his help on this.

2001-04-27  Wolfgang Sourdeau  <wolfgang@contre.com>

	* configure.in: reversed dependency from gnome-print 0.28 to 0.25.
	release 0.21.1.

	* src/gtkutils.c (dialog_window_new): automatically display
	dialogs at the center of the screen

	* ghfaxviewer.1: we now have a manpage describing ghfaxviewer

	* src/progress.c (gfv_progress_new): the cancel button is a
	GNOME_STOCK_BUTTON_CANCEL if compiled for GNOME

	* src/gn_print.c (prepare_print_master): display a progress dialog
	to show print status as well as to permit to cancel the operation

	* src/errors.c (display_failure): same thing as below for error
	dialogs

	* src/progress.c (gfv_progress_new): the progress windows are now
	using the DialogWindow facility from gtkutils.c

	* src/gtkutils.c (dialog_window_set_button): new function to make
	it shorter to create dialog boxes with only one button;
